NEWS - OpenPrinting CUPS Filters v1.8.3 - 2016-03-23
----------------------------------------------------

CHANGES IN V1.9.0

	- cups-browsed: Added support for debug logging into a file (usually
	  /var/log/cups/cups-browsed_log, to be activated via "-l" or
	  "--logfile" option or via "DebugLogging file" option in
	  cups-browsed.conf.
	- cups-browesd: Consistent use of debug_printf() in the LDAP support.
	- cups-browsed: Added "Requires=cups-service" to the
	  cups-browsed.service file, so that systemd keeps CUPS running while
	  shutting down cups-browsed on system shutdown (Ubuntu bug #1579905).
	- README: Extended pdftopdf's documentation.
	- README: Added documentation for the pdfAutorotate option in
	  pdftopdf.
	- gstoraster: Treat status output of the waitpid() function properly,
	  to avoid gstoraster exiting with zero status when Ghostscript
	  exited with non-zero status or got terminated by a signal
	  (Bug #1354).
	- README: Fixed typos. Thanks to Pranjal Bhor (bhor dot pranjal at
	  gmail dot com) for the patch.
	- braille: Recognize application/vnd.cups-pdf-banner MIME type and
	  read standard input directly instead of using /dev/stdin.
	- braille: Drop output of the "type" command when checking the
	  presence of helper utilities.
	- braille: Do not send EOF twice to the braille embosser.
	- cups-browsed/sys5ippprinter: Fixed documentation about the allowed
	  input formats for auto-created network printer queues using
	  sys5ippprinter, also improved NEWS entry about renaming of
	  sys5ippprinter (Debian bug #819665).

CHANGES IN V1.8.3

	- cups-browsed: When creating or modifying a local print queue
	  set the printer-is-shared bit to false in a separate IPP
	  request as this operation errors on queues directly pointing
	  to remote CUPS queues with the IPP backend. This way we can
	  ignore the error and assure that all other settings are
	  applied (Ubuntu bug #1560099).
	- Fixed pkg-config support so that $PKG_CONFIG gets used and